# lifecycle-analysis

./: .gitignore  README.md  README_jp.md  pyproject.toml
.github/workflows/: test.yaml
docs/: README_analysis_API.md  README_calc_bit_vector.md  README_detail.md  README_files.md  README_models.md  memo.md
examples/: bench_mark.py  quick_start.py
src/lifecycle/: __init__.py  analysis.py  analysis_data_builder.py  analyzer.py  builder.py  collection.py  collection_analyzer.py  comparison.py  comparison_builder.py  model.py
src/lifecycle/pipelines/: activity.py  pandas_converter.py  presence.py  quality.py
src/lifecycle/pipelines/original version/: activity.py  presence.py
src/lifecycle/pipelines_pandas_version/: presence.py  quality.py
tests/: asserts.py  conftest.py  test_analysis_builder.py  test_analyzer.py  test_builder.py  test_collection_analyzer.py  test_comparison_builder.py  test_pipeline_activity.py  test_pipeline_presence.py  test_pipeline_quality.py
